# qwhizz

./: ._DEPLOYMENT_GUIDE.md  .gitignore  add_card_tab.py  app.py  components.py  dnaapp.py  find_theme_path.py  logs-rus19023-quizz-main-app.py-2026-02-15T08_07_51.583Z.txt  pyrightconfig.json  qwhizz.py  requirements.txt  rsapp.py  streamlit_log.txt  study_modes.py  study_tab.py  test_crash.py  week06.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
apps/: DEPLOYMENT_GUIDE.md  add_card_tab.md  qwhizz.py
apps/cybersec/: .gitignore  runapp.py  runapp.sh
apps/gesci205/: .gitignore  qwhizz.py  requirements.txt  (+3 more)
clearances/: clearances.py  implement.txt  importcsv.py  importcsv_refactored.py  pyproject.toml  report_module.py  rerun-poetry.bat  test.py  train_fuzzy_search.py  train_model.txt
clearances-old-maybe/: .last_poetry_update  Worker_Search_Export_Wed Jan 28 2026.csv  clearances.py  implement.txt  importcsv.py  importcsv_refactored.py  pyproject.toml  report_module.py  rerun-poetry.bat  rerun-poetry.sh  test.py  train_fuzzy_search.py  train_model.txt
common/: add_deck_tab.py
core/: ._game_mode_logic.py  answer_checking.py  flashcard_logic.py  game_mode_logic.py  quiz_generator.py  state.py  study_modes.py
data/: card_format.py  deck_store.py  decks.py  for-quiz-generator.py  import_cards.py
theme_switcher/: theme_base.css  theme_switcher.py  theme_template.css
ui/: add_card_tab.py  admin_tab.py  auth.py  card_format.py  components.py  errors.py  layout.py  manage_tab.py  ponder_tab.py  router.py  stats_tab.py  study_tab.py  styles.py
(+54 files in other folders)
